--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OfferDbContext": "Server=localhost;Port=5432;Database=OfferServiceDatabase;Username=postgres;Password=rudy21@;TrustServerCertificate = true;SSL Mode=Prefer;"
+    "OfferDbContext": "Server=localhost;Port=5432;Database=OfferServiceDb;Username=postgres;Password=rudy21@;TrustServerCertificate = true;SSL Mode=Prefer;"
   },
   
   "Logging": {
