Admin panel changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "OfferDbContext": "Server=localhost;Port=5432;Database=OfferServiceDb;Username=postgres;Password=rudy21@;TrustServerCertificate = true;SSL Mode=Prefer;"
   },
+
+  "ApiReferences": {
+    "Users": "http://localhost:5284"
+  },
   
   "Logging": {
     "LogLevel": {
